--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "build": "npm i"
+    "start": "nodemon app.js"
+
   },
   "author": "vaqsi",
   "license": "ISC",
